--- a/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
@@ -20,15 +20,15 @@
             <ol>
                 <li>
                     <label for="first-name">First name</label>
-                    <input id="first-name" name="billingAccount.firstName" type="text"/>
+                    <input id="first-name" name="billingAddress.firstName" type="text"/>
                 </li>
                 <li>
                     <label for="last-name">Last name</label>
-                    <input id="last-name" name="billingAccount.lastName" type="text"/>
+                    <input id="last-name" name="billingAddress.lastName" type="text"/>
                 </li>
                 <li>
                     <label for="email">Email</label>
-                    <input id="email" name="billingAccount.emailAddress" type="text"/>
+                    <input id="email" name="billingAddress.emailAddress" type="text"/>
                 </li>
             </ol>
         </fieldset>
@@ -36,7 +36,7 @@
             <ol>
                 <li>
                     <label for="card-type">Card type</label>
-                    <select id="card-type" name="cardType">
+                    <select id="card-type" name="type">
                         #foreach($cardType in $cardTypes)
                             <option value="$cardType">$cardType.commonName</option>
                         #end
@@ -44,11 +44,11 @@
                 </li>
                 <li>
                     <label for="card-number">Card number</label>
-                    <input id="card-number" name="cardNumber" type="text"/>
+                    <input id="card-number" name="number" type="text"/>
                 </li>
                 <li>
                     <label for="expiry-date">Expiration date</label>
-                    <input id="expiry-date" name="cardExpiryDate" type="text"/>
+                    <input id="expiry-date" name="expiryDate" type="text"/>
                 </li>
             </ol>
         </fieldset>
