--- a/petstore-app/src/main/webapp/WEB-INF/views/receipts/show.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/receipts/show.vm
@@ -53,9 +53,9 @@
 <fieldset id="payment-details">
     <legend>Payment details</legend>
     <ol>
-        <li><span>Card type: </span><span>$order.creditCardDetails.type.commonName</span></li>
-        <li><span>Card number: </span><span class="number">$order.creditCardDetails.number</span></li>
-        <li><span>Card expiry date: </span><span class="date">$order.creditCardDetails.expiryDate</span></li>
+        <li><span>Card type: </span><span>$order.creditCardDetails.cardCommonName</span></li>
+        <li><span>Card number: </span><span class="number">$order.creditCardDetails.cardNumber</span></li>
+        <li><span>Card expiry date: </span><span class="date">$order.creditCardDetails.cardExpiryDate</span></li>
     </ol>
 </fieldset>
 
