Consistent usage of dashed instead of a mix of dashes and underscores in HTML ids.

--- a/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
@@ -26,7 +26,7 @@
                 #set( $rowStyle = 'oddrow' )
             #end
 
-        <tr id="cart_item_$cartItem.itemNumber" class="cart-item $rowStyle">
+        <tr id="cart-item-$cartItem.itemNumber" class="cart-item $rowStyle">
             <td class="count">$cartItem.quantity</td>
             <td class="item">$!cartItem.itemDescription</td>
             <td class="price">$cartItem.unitPrice</td>
