--- a/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
@@ -26,16 +26,16 @@
                 #set( $rowStyle = 'oddrow' )
             #end
 
-        <tr id="cart-item-$cartItem.itemNumber" class="cart-item $rowStyle">
+        <tr id="cart-item-$cartItem.itemNumber" class="$rowStyle">
             <td class="count">$cartItem.quantity</td>
-            <td class="item">$!cartItem.itemDescription</td>
+            <td class="text">$!cartItem.itemDescription</td>
             <td class="price">$cartItem.unitPrice</td>
             <td class="total">$cartItem.totalPrice</td>
         </tr>
         #end
-        <tr class="cart-summary">
+        <tr id="cart-summary">
             <td colspan="4">
-                <ol class="calculations">
+                <ol id="calculations">
                     <li>
                         <span class="label">Grand Total: </span>
                         <span id="cart-grand-total" class="total">$cart.grandTotal</span>
