--- a/petstore-app/src/main/webapp/WEB-INF/views/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/products.vm
@@ -26,11 +26,11 @@
                     #else
                         #set( $rowStyle = 'oddrow' )
                     #end
-                <tr class="product $rowStyle">
+                <tr id="product-$product.number" class="$rowStyle">
                     <td class="photo"><a href="$base/products/$product.number/items"><img
                             src="$base$attachments.getAttachmentUrl($product)"></a></td>
                     <td class="name"><a href="$base/products/$product.number/items">$product.name</a></td>
-                    <td>$!product.description</td>
+                    <td >$!product.description</td>
                 </tr>
                 #end
             </tbody>
