A custom spring view that should play nicer with VelocityTools 2.0.x (less side effects I hope)

--- a/petstore-app/src/main/webapp/WEB-INF/views/decorators/main.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/decorators/main.vm
@@ -18,6 +18,7 @@
         #parse("_logout.vm")
     </div>
     <div id="shopping-cart">
+##        Spring aop proxy prefix bean names with scopedTarget
         #set( $cart = $session.getAttribute('scopedTarget.cart') )
         #parse("_cart.vm")
     </div>
