--- a/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
@@ -4,16 +4,7 @@
 </head>
 <body>
 <fieldset>
-    <legend>Billing Information</legend>
-    
-    <div id="summary">
-        <ol id="calculations">
-            <li>
-                <span class="label">Total: </span>
-                <span id="order-total" class="total">$cart.grandTotal</span>
-            </li>
-        </ol>
-    </div>
+    <legend>Billing Information - Cart Total: $cart.grandTotal</legend>
 
     <form id="checkout" action="$base/purchases" method="post">
         <fieldset id="billing-address">
