Added test infrastructure to unit test validation errors in velocity views. Added unit tests when purchase form renders errors.

--- a/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
@@ -9,7 +9,7 @@
     #springBind( "paymentDetails" )
     #if ($status.error)
     <div>
-    <ol>
+    <ol id="global-errors" class="errors">
         #foreach($error in $status.errorMessages)
         <li>$error</li>
         #end
@@ -49,7 +49,7 @@
                     <input id="card-number" name="cardNumber" type="text"/>
                     #springBind( "paymentDetails.cardNumber" )
                     #if ($status.error)
-                    <ol>
+                    <ol id="card-number-errors" class="errors">
                         #foreach($error in $status.errorMessages)
                         <li>$error</li>
                         #end
