- modified css for error messages - addes "continue shopping" link in billing info page - added delete image in cart - removed footer

--- a/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
@@ -30,6 +30,7 @@
             <td class="text">$!cartItem.itemDescription</td>
             <td class="price">$cartItem.unitPrice</td>
             <td class="total">$cartItem.totalPrice</td>
+            <td class="deleteitem"><img src="$base/images/garbage.png" alt="delete item"></td>
         </tr>
         #end
         <tr id="cart-summary">
