--- a/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/purchases/new.vm
@@ -51,5 +51,10 @@
         </fieldset>
     </form>
 </fieldset>
+<div id="actions">
+    <ol>
+        <li><a id="continue-shopping" href="$base">Continue Shopping</a></li>
+    </ol>
+</div>
 </body>
 </html>
