Using windowlicker instead of webdriver lift interface

--- a/petstore-app/src/main/webapp/WEB-INF/views/decorators/main.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/decorators/main.vm
@@ -14,7 +14,7 @@
     <div id="search-box">
         #parse("_search.vm")
     </div>
-    <div id="logout">
+    <div id="logout-box">
         #parse("_logout.vm")
     </div>
     <div id="shopping-cart">
