--- a/petstore-app/src/main/webapp/WEB-INF/views/decorators/_logout.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/decorators/_logout.vm
@@ -3,7 +3,7 @@
     <fieldset>
         <ol>
             <li>
-                <button type="submit">Logout</button>
+                <button id="logout" type="submit">Logout</button>
             </li>
         </ol>
     </fieldset>
