--- a/petstore-app/src/main/webapp/WEB-INF/views/items.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/items.vm
@@ -8,29 +8,29 @@
 	    <span id="out-of-stock">No item left in inventory</span>
 	#else
 	    <span id="inventory-count">$itemList.size()</span> $display.plural($itemList.size(), "item") $display.plural($itemList.size(), "is", "are") available for purchase
-		<table id="inventory" width="85%">
+		<table id="inventory">
 			<tr>
 				<th>Reference number</th>
-	            <th>Description</th>
+	            <th>Description</th>             
 	            <th>Price</th>
 	            <th></th>
 			</tr>
 		    #foreach ($item in $itemList)
-			 <tr id="item-$item.Number">
+			 <tr id="item-$item.number">
 	            <td class="number">$item.number</td>
 	            <td class="description">$!item.description</td>
 	            <td class="price">$item.price</td>
 	            <td>
-	            <form name="form-$item.Number" action="$base/cartitems" method="post">
+	            <form action="$base/cartitems" method="post">
 	                <input type="hidden" name="item_number" value="$item.number"/>
-					<button class="add_to_cart" id="add-to-cart-$item.Number">Add to cart</button>
+					<button class="add-to-cart" id="add-to-cart-$item.number">Add to cart</button>
 	            </form>
 	            </td>
 	        </tr>
 			#end
 		 </table>
 	 #end
-	 <div id="action_items">
+	 <div id="items-actions">
 		<a class="continue" href="$base">&laquo; continue shopping</a>
 	 </div>
 </div>
