--- a/petstore-app/src/main/webapp/stylesheets/main.css
+++ b/petstore-app/src/main/webapp/stylesheets/main.css
@@ -1,10 +1,10 @@
-a {
-    text-decoration: none;
-}
-
 body.petstore {
     margin: 0 auto;
     font: 100% "Georgia", "Arial", serif;
+}
+
+a {
+    text-decoration: none;
 }
 
 img {
@@ -20,7 +20,7 @@ th {
     text-align: left;
 }
 
-.add_to_cart {
+.add-to-cart {
     margin-right: 0px;
     font: 14px "Georgia", "Arial", serif;
     padding: 5px 10px;
@@ -59,10 +59,6 @@ th {
     color: red;
 }
 
-.last_row td {
-    border-bottom: 3px double black;
-}
-
 .overline {
     border-top: solid #c6ee22 2px;
 }
@@ -86,43 +82,27 @@ th {
     color: #84a208;
 }
 
-#action {
-    margin-top: 45px;
-    margin-left: 475px;
-}
-
-#action_cart {
+#cart-actions {
     height: 40px;
     margin-top: 45px;
-    margin-left: 370px;
+    margin-left: 550px;
 }
 
-#action_checkout {
+#order-actions {
     margin-top: 45px;
     margin-left: 145px;
     margin-bottom: 40px;
 }
 
-#action_items {
+#items-actions {
     margin-top: 45px;
     margin-left: 610px;
     margin-bottom: 40px;
 }
 
-#action_receipt {
+#receipt-actions {
     margin-top: 45px;
     margin-left: 0px;
-}
-
-#actions li {
-    list-style-type: none;
-    float: left;
-    width: 45%;
-    text-align: left;
-}
-
-#actions li+li {
-    text-align: right;
 }
 
 #billing-address {
@@ -147,24 +127,29 @@ th {
     min-height: 370px;
 }
 
-#cart th, #items th, #receipt th {
+#cart-content, #inventory {
+    margin-top: 50px;
+}
+
+#cart-content, #inventory, #order-details {
+    width: 85%;
+}
+
+#cart-content th, #inventory th, #order-details th {
     border: none;
     font-weight: normal;
     font-size: 22px;
     height: 50px;
 }
 
-#cart td, #items td {
+#cart-content td, #inventory td {
     padding-top: 2px;
     padding-bottom: 4px;
 }
 
-#cart table, #items table {
-    margin-top: 50px;
-}
-
 #cart-summary {
     border-top: 3px double black;
+    height: 35px;
 }
 
 #cash {
@@ -205,11 +190,11 @@ th {
     position: absolute;
 }
 
-#checkout-form .errors {
+#order-form .errors {
     display: inline;
 }
 
-#checkout-form .errors li {
+#order-form .errors li {
     display: inline;
 }
 
@@ -254,21 +239,7 @@ th {
     padding-top: 75px;
 }
 
-#checkout {
-    margin-top: -5px;
-    float: right;
-    font-size: 14px;
-    margin-right: 280px;
-    padding: 5px;
-    text-align: center;
-    color: black;
-    width: 80px;
-    background-color: #c6ee22;
-    border: solid #6a6a6a 2px;
-    -moz-border-radius: 4px 4px 4px 4px;
-}
-
-#checkout_action {
+#checkout, #order {
     display: inline;
     font: 14px "Georgia", "Arial", serif;
     padding: 5px 10px;
@@ -280,13 +251,13 @@ th {
     -moz-border-radius: 4px 4px 4px 4px;
 }
 
-#checkout_action a {
+#order {
     cursor: pointer;
-    color: black;
 }
 
 #checkout a {
     color: black;
+    cursor: pointer;
 }
 
 #footer {
@@ -306,7 +277,7 @@ th {
 #header {
     width: 100%;
     height: 125px;
-    background: transparent url(../images/fullbg.png) repeat-x;
+    background: transparent url(../images/bg.png) repeat-x;
     position: relative;
 }
 
@@ -326,18 +297,8 @@ th {
     font-size: 17px;
 }
 
-#j_design {
-    color: #c6ee22;
-    font-size: 80px;
-    vertical-align: 30%;
-}
-
-#logo {
-    padding-top: 20px;
-}
-
 #logout {
-    background: white;
+    background: none;
     border: none;
 }
 
@@ -371,7 +332,7 @@ th {
     border: solid #c5c5c5 1px;
 }
 
-#search-button {
+#search {
     position: absolute;
     width: 34px;
     height: 30px;
@@ -384,7 +345,7 @@ th {
     cursor: pointer;
 }
 
-#search-button img {
+#search img {
     padding-top: 2px;
 }
 
@@ -398,26 +359,18 @@ th {
     color: black;
 }
 
-#menu_home {
-    text-align: right;
-}
-
-#menu_cart {
-    text-align: right;
-}
-
 #no-match {
     margin-left: 40px;
     padding-top: 35px;
     color: black;
 }
 
-#onglet_home {
+#home-tab {
     margin-top: 0px;
     margin-left: 792px;
 }
 
-#onglet_cart {
+#cart-tab {
     margin-top: 0px;
     margin-left: 875px;
 }
@@ -428,12 +381,6 @@ th {
 
 #order-summary {
     border-top: 3px double black;
-}
-
-#pet_design {
-    color: #3d3d3d;
-    font-size: 80px;
-    vertical-align: 30%;
 }
 
 #payment-details {
@@ -451,12 +398,6 @@ th {
 
 #receipt table {
     margin-top: 20px;
-}
-
-#store_design {
-    color: #c6ee22;
-    font-size: 80px;
-    vertical-align: 30%;
 }
 
 #search-box input {
